# kaitaiStructCompile.setuptools

./: .gitlab-ci.yml  ReadMe.md  setup.cfg
kaitaiStructCompile/: setuptools.py
tests/: test.py
