[metadata]
name = kaitaiStructCompile.setuptools
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.setuptools
description = an addon for setuptools to compile .ksy files into .py ones while installing/building a python package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, binary format, setuptools, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
py_modules = kaitaiStructCompile.setuptools
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.test
install_requires = 
	setuptools > 46
	toml
	kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py.git
	kaitaiStructCompile.schemas @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.schemas.git
	kaitaiStructCompile.repo @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.repo.git

[options.extras_require]
toml = toml @ git+https://github.com/uiri/toml.git

[options.entry_points]
distutils.commands =
	kaitai_transpile = kaitaiStructCompile.setuptools:kaitai_transpile
distutils.setup_keywords =
	kaitai = kaitaiStructCompile.setuptools:kaitaiHelperSetupPy
setuptools.finalize_distribution_options =
	tool.kaitai @ {"only":"toml"} = kaitaiStructCompile.setuptools:kaitaiHelperPyProjectToml
